# 2D-Rocket-Trajectory-Simulator

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  PROJECT_STATE.md  README.md  build.ninja  cmake_install.cmake  kalmanFilter.cpp  kalmanFilter.h  mainwindow.cpp  mainwindow.h  qtcsettings.cmake  rocket.cpp  rocket.h  sensor.cpp  sensor.h  vector2d.cpp  vector2d.h
.cmake/api/v1/reply/: cache-v2-dbc6e484ae9bfd0fd2e6.json  cmakeFiles-v1-ed5c91b8866dac8019e4.json  codemodel-v2-1f2e4a549e923c0a9a2d.json  directory-.-Debug-dcf4effe32fb8eb3716e.json  index-2026-03-05T12-12-33-0314.json  target-RocketSimulator-Debug-b571f8df6908e926aada.json  target-RocketSimulator_autogen-Debug-ca1f1225d5b9e0f741e9.json  target-RocketSimulator_autogen_timestamp_deps-Debug-362d90b250f2d91e51b4.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_RocketSimulator_c40e2d0619.cmake
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: auto_ptr.h.3C8A9B67E3598E8B.idx  kalmanFilter.cpp.3A0E0CD047ADF0E1.idx  kalmanFilter.h.9F843D1FD0887C58.idx  main.cpp.9DDBBE7B39D143D8.idx  mainwindow.cpp.69601FAF8969A16C.idx  mainwindow.h.1FFF13F0E295BC80.idx  qcomparehelpers.h.D2492DAF1F6FE3B3.idx  qflags.h.211E40388DE0EC6F.idx  qiodevicebase.h.37B81008F7881793.idx  qiterator.h.D76533F112CA3FCA.idx  qlayout.h.A1125E1A60D7457A.idx  qlayoutitem.h.555DD6EB1B893671.idx  qlist.h.EF74245CE85755EC.idx  qmainwindow.h.FF84FE7FE1AC84D1.idx  (+16 more)
RocketSimulator_autogen/: deps
RocketSimulator_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
